# youtube-analyzer

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  SESSIONS.md  pyproject.toml
.claude/commands/: finalize-step.md  plan-step.md
config/: .env.example  mcp.json
mcp_server/: __init__.py  cache.py  errors.py  paths.py  server.py
mcp_server/auth/: oauth.py
mcp_server/tools/: analytics.py  my_analytics.py  reports.py  studio_csv.py  thumbnails.py  transcripts.py  youtube_api.py
skills/analyze-my-channel/: SKILL.md
skills/clone-competitor/: SKILL.md
skills/find-viral-formula/: SKILL.md
skills/summarize-video/: SKILL.md
tests/: conftest.py  test_analytics.py  test_my_analytics.py  test_oauth.py  test_reports.py  test_studio_csv.py  test_thumbnails.py  test_transcripts.py  test_youtube_api.py
