[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "youtube-analyzer"
version = "0.1.0"
description = "MCP server + Claude Code skills that analyze YouTube data to drive content strategy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Talha Hamdees", email = "talhahamdees019@gmail.com" }]
keywords = ["youtube", "mcp", "claude", "content-strategy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.2",
    "pandas>=2.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "youtube-transcript-api>=0.6",
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.urls]
Repository = "https://github.com/TalhaHamdees/youtube-analyzer"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
